# flask-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bitbucket-pipelines.yml  docker-compose.yml  make_celery.py  nginx.Dockerfile  pipeline.Dockerfile  pipeline_2.Dockerfile  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: master.yml
app/: __init__.py
app/admin/v1/: __init__.py  user.py
app/admin/v1/schemas/: user.py
app/api/v1/: __init__.py  celery.py  user.py
app/api/v1/schemas/: user.py
app/models/: base.py  user.py
app/services/: base.py  user.py
app/tasks/: __init__.py
app/types/: __init__.py  models.py
config/: __init__.py  celery.py  database.py  nginx_default.conf
envs/: .env.sample  .env.test
migrations/: env.py
migrations/versions/: 68702fb63fc2_add_user_table.py  b4186c35387e_add_user_table.py
nginx/: nginx_default.conf
scripts/: celery.sh  flower.sh  local-bootstrap.sh  server-prod.sh  server.sh  test.sh  upgrade-db.sh
tests/: conftest.py
tests/app/admin/v1/: test_celery.py  test_user.py
tests/fixtures/: __init__.py  database.py  user.py
tests/helpers/: asserts.py  database.py
