[tool.poetry]
name = "flask-app"
version = "0.1.1"
description = "Flask boilerplate project"
authors = ["António Alvarenga <aalvarenga@imaginarycloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-restful = "^0.3.10"
flask-apispec = "^0.11.4"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
marshmallow-sqlalchemy = "^0.29.0"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = ["envs/.env.test"]

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
